Added automated testing via tox and zuul.
Tweaked tests/basic_test.sh functional test so that it no longer
requires multpass, and can run without kvm cpu extensions being
enabled (not all machines in the game have cpu extensions.)

Added tox.ini, wrapper script for building and installation, etc.

Change-Id: I968116dd7bec412a55813c896d60cfc86c7070db

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -551,6 +551,7 @@ parts:
       - libcaca0
       - libfdt1
       - libflac8
+      - libglu1-mesa
       - libiscsi7
       - libjpeg-turbo8
       - libnspr4
@@ -562,6 +563,7 @@ parts:
       - librados2
       - librbd1
       - libsdl1.2debian
+      - libslang2
       - libsndfile1
       - libusb-1.0-0
       - libusbredirparser1
@@ -573,6 +575,7 @@ parts:
       - libxdmcp6
       - libxen-dev
       - libxext6
+      - libpng16-16
     build-packages:
       - acpica-tools
       - libaio-dev
