Broke configuration out into a manual step.
Renamed the old and outdated "configure-openstack" script to "init.sh"

Updated init.sh and folded most of the configure hook into it.

Removed database installation step from install hook.

We can now install microstack without a database dump, which helps
immensely in updating. And we have a logical place to put additional
configuraiton, including some of the manual steps in DEMO.md, which
could be scripted if we gave users a chance to skip the system changes
that they wanted to skip.

Also updated README and DEMO file to match new flow. Updated test
files.

Future cleanup and features documented in Trello, but not included in
this PR, which is big enough already :-)

Change-Id: I8d926a8b463124494ddb7a4696adbe86f89db7d5

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,8 +21,8 @@ apps:
 #      - network
 
   # OpenStack Service Configuration
-  configure:
-    command: configure-openstack
+  init:
+    command: init.sh
 #    plugs:
 #      - network
 
