--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = snap
+envlist = multipass
 skipsdist = True
 
 [testenv]
@@ -12,7 +12,22 @@ whitelist_externals =
     /snap/bin/snapcraft
 
 [testenv:snap]
+# Testing environment for the gerrit gate. Named 'snap' to conform to
+# the requirements of the snap friendly job that we inherit from in
+# .zuul.yaml.
 deps = -r{toxinidir}/test-requirements.txt
 commands =
-    {toxinidir}/tools/install_and_build.sh
+    {toxinidir}/tools/lxd_build.sh
     {toxinidir}/tests/basic-test.sh
+
+[testenv:multipass]
+# Default testing environment for a human operated machine. Builds the
+# snap in a multipass instance, then runs tests in a separate multipass
+# instance. This makes the fewest changes to your personal computer,
+# but is heavier on system requirements. For a more lightweight test,
+# use the "snap" environment above. Beware that you will wind up with
+# a lot of things installed, including potentially the locally built
+# version of MicroStack!
+commands =
+    {toxinidir}/tools/multipass_build.sh
+    {toxinidir}/tests/basic-test.sh -m
