Added "basic" option to tox test environments
Just runs `tests/basic_test.sh -m` without building the snap
first. Useful for when you want to re-run the basic_test to verify
that a sporadic issue has been fixed, without rebuilding the snap each
time.

Counterargument: you could always just run `tests/basic_test.sh -m` on
its own. I find it easier to keep one test command in my fingers,
however, rather than having to switch between "tox plus args" and
"something else plus args"

Change-Id: I5ec28864ed41a4e11726df8aee1d31b8ef097f03

--- a/tox.ini
+++ b/tox.ini
@@ -31,3 +31,8 @@ commands =
 commands =
     {toxinidir}/tools/multipass_build.sh
     {toxinidir}/tests/basic-test.sh -m
+
+[testenv:basic]
+# Just run basic_test.sh, with multipass support.
+commands =
+    {toxinidir}/tests/basic-test.sh -m
