Better init script
Written in Python. Easier to maintain. Easier to make interactive.

Change-Id: Ib579b43c1564b55165de5c2f3d20387122448b19

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -3,6 +3,8 @@
     parent: openstack-tox-snap-with-sudo
     timeout: 7200
     nodeset: ubuntu-bionic
+    vars:
+      tox_envlist: init_lint init_unit snap
 
 - project:
     check:
