--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = multipass
+envlist = init_lint, init_unit, multipass
 skipsdist = True
 
 [testenv]
@@ -36,3 +36,16 @@ commands =
 # Just run basic_test.sh, with multipass support.
 commands =
     {toxinidir}/tests/basic-test.sh -m
+
+
+[testenv:init_lint]
+basepython=python3
+deps = -r{toxinidir}/tools/init/test-requirements.txt
+       -r{toxinidir}/tools/init/requirements.txt
+commands = flake8 {toxinidir}/tools/init/init/
+
+[testenv:init_unit]
+basepython=python3
+deps = -r{toxinidir}/tools/init/test-requirements.txt
+       -r{toxinidir}/tools/init/requirements.txt
+commands = stestr run {posargs}
