Upgrade to Python3/Stein
Move openstack-projects part from python2 to python3.

Add cloud archive.

Update qemu and libvirt versions to those from cloud archive (they
work with python3, while the distro packages versions don't).

Switch from rocky to stein.

Fetch libvirt and qemu sources via "apt source". Gets rid of sub
version hard coding in snapcraft.

Update hard coded references in tests to rocky from stein.

Change-Id: Idb38717998a13feaaf0782e880e540f28bc452a8

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -4,7 +4,7 @@
     timeout: 7200
     nodeset: ubuntu-bionic
     vars:
-      tox_envlist: init_lint init_unit snap
+      tox_envlist: snap
 
 - project:
     check:
