Fix horizon dashboard
Port the python2.7 local settings overrides to the python3.6 directory
structure.

Move all local_settings.py overrides into _05_snap_tweaks.py as part
of troubleshooting some remaining problems. Everything is more
organized and functional now :-)

Added selenium tests.

Change-Id: I54923e1dc9c7ffa47c2ef6fb90ea9d224b0d2eee

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,10 @@ envlist = init_lint, init_unit, multipass
 skipsdist = True
 
 [testenv]
+basepython=python3
 install_command = pip install {opts} {packages}
 setenv =
-    PATH = {env:PATH}:/snap/bin
+    PATH = /snap/bin:{env:PATH}
 passenv = HOME TERM
 whitelist_externals =
     sudo
@@ -15,10 +16,12 @@ whitelist_externals =
 # Testing environment for the gerrit gate. Named 'snap' to conform to
 # the requirements of the snap friendly job that we inherit from in
 # .zuul.yaml.
+basepython=python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
     {toxinidir}/tools/lxd_build.sh
     {toxinidir}/tests/basic-test.sh
+    {toxinidir}/tests/test_horizonlogin.py
 
 [testenv:multipass]
 # Default testing environment for a human operated machine. Builds the
@@ -28,6 +31,7 @@ commands =
 # use the "snap" environment above. Beware that you will wind up with
 # a lot of things installed, including potentially the locally built
 # version of MicroStack!
+deps = -r{toxinidir}/test-requirements.txt
 commands =
     {toxinidir}/tools/multipass_build.sh
     {toxinidir}/tests/basic-test.sh -m
@@ -37,15 +41,22 @@ commands =
 commands =
     {toxinidir}/tests/basic-test.sh -m
 
-
 [testenv:init_lint]
-basepython=python3
 deps = -r{toxinidir}/tools/init/test-requirements.txt
        -r{toxinidir}/tools/init/requirements.txt
 commands = flake8 {toxinidir}/tools/init/init/
 
 [testenv:init_unit]
-basepython=python3
 deps = -r{toxinidir}/tools/init/test-requirements.txt
        -r{toxinidir}/tools/init/requirements.txt
 commands = stestr run {posargs}
+
+[testenv:browser]
+# Run browser tests. Assumes that you have the snap installed and
+# initialized locally, and a valid DISPLAY (install xvfb for a virtual
+# one).
+# TODO: figure out how to integrate this w/ multipass. (e.g. setup
+# port forwarding and call into the mulitpass machine.)
+deps = -r{toxinidir}/test-requirements.txt
+commands =
+    {toxinidir}/tests/test_horizonlogin.py
