Make Horizon Dashboard settings operator overrideable.
We want to allow operators to override Horizon's default
settings. This involves moving local_settings.d out of the read only
snap filesystem, and into $SNAP_COMMON. This is a little bit tricky.

First, we patch settings.py and local_settings.py as we're building the
snap, to include a LOCAL_PATH in $SNAP_COMMON.

Then, we add a template with the rest of our default overrides,
and write it out to $SNAP_COMMON/horizon/local_settings.d

Finally we tweak our tests so that we can give our overrides a
spin. As a bonus, this makes test_horizonglogin.py a lot easier to run
in our multipass testing scenario!

`tox -e basic` now also runs selenium tests, as well.

Change-Id: Ic0ce18cfa1b97a93191da749095d8aa2270d5aeb

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -328,6 +328,7 @@ parts:
     python-version: python3
     after:
       - uca-sources
+      - patches
     constraints:
       - https://raw.githubusercontent.com/openstack/requirements/stable/stein/upper-constraints.txt
     source: http://tarballs.openstack.org/keystone/keystone-stable-stein.tar.gz
@@ -360,6 +361,16 @@ parts:
       - python3-dev
     override-prime: |
       snapcraftctl prime
+      # Patch Openstack Dashboard (horizon) settings files.
+      for patch in ${SNAPCRAFT_STAGE}/patches/horizon/*.patch; do
+        echo "Applying $(basename "$patch") ..."
+        patch \
+          --batch \
+          --forward \
+          --strip 1 \
+          --input "$patch"
+        echo
+      done
       # Uncomment the below line for better python-libvirt debugging output.
       # patch --batch --forward --strip 1 --input ../project/patches/nova/nova_log_error.patch
       # Now that everything is built, let's disable user site-packages
@@ -368,6 +379,9 @@ parts:
       # This is the last step, let's now compile all our pyc files.
       # Ignore errors due to syntax issues in foobar python 2.
       ./usr/bin/python3.6 -m compileall . || true
+    organize:
+      lib/python3.6/site-packages/openstack_dashboard/local/local_settings.py.example: lib/python3.6/site-packages/openstack_dashboard/local/local_settings.py
+
   keystone-config:
     after: [openstack-projects]
     plugin: dump
