--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,6 @@ deps = -r{toxinidir}/test-requirements.txt
 commands =
     {toxinidir}/tools/lxd_build.sh
     {toxinidir}/tests/basic-test.sh
-    {toxinidir}/tests/test_horizonlogin.py
 
 [testenv:multipass]
 # Default testing environment for a human operated machine. Builds the
@@ -39,6 +38,7 @@ commands =
 [testenv:basic]
 # Just run basic_test.sh, with multipass support.
 commands =
+    {toxinidir}/tools/basic_setup.sh
     {toxinidir}/tests/basic-test.sh -m
 
 [testenv:init_lint]
