--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -359,6 +359,7 @@ parts:
       - coreutils
       - haproxy
       - python3-dev
+      - python3-systemd
     override-prime: |
       snapcraftctl prime
       # Patch Openstack Dashboard (horizon) settings files.
@@ -474,6 +475,8 @@ parts:
 
   # Snap patches
   patches:
+    after:
+      - uca-sources
     source: patches/
     plugin: dump
     organize:
