Enable loading and saving of question answers.
This lays the groundwork for interactive init, as well as being able
to specify control and compute nodes.

Added preliminary config lists for control and compute nodes. Added
appropriate default snapctl config settings in install script.

Also changed "binary" questions to "boolean" questions, as that's
better wording, and it means that my docstrings are not a confusing
mix of "boolean" and "binary" when I forget which term I used.

Snuck in a fix for the "basic" testing environment -- it was missing
the Python requirements, and was therefore failing!

Change-Id: I7f95ab68f924fa4d4280703c372b807cc7c77758

--- a/snap-overlay/snap-openstack.yaml
+++ b/snap-overlay/snap-openstack.yaml
@@ -57,10 +57,10 @@ setup:
     "{snap_common}/instances": 0755
     "{snap_common}/etc/microstack.rc": 0644
   snap-config-keys:
-    ospassword: 'ospassword'
-    extgateway: 'extgateway'
-    extcidr: 'extcidr'
-    dns: 'dns'
+    ospassword: 'questions.os-password'
+    extgateway: 'questions.ext-gateway'
+    extcidr: 'questions.ext-cidr'
+    dns: 'questions.dns'
 entry_points:
   keystone-manage:
     binary: "{snap}/bin/keystone-manage"
