--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -830,7 +830,6 @@ parts:
   init:
     plugin: python
     python-version: python3
-    python-packages:
-      - pymysql
-      - wget
+    requirements:
+      - requirements.txt  # Relative to source path, so tools/init/req...txt
     source: tools/init
