--- a/tox.ini
+++ b/tox.ini
@@ -37,6 +37,7 @@ commands =
 
 [testenv:basic]
 # Just run basic_test.sh, with multipass support.
+deps = -r{toxinidir}/test-requirements.txt
 commands =
     {toxinidir}/tools/basic_setup.sh
     {toxinidir}/tests/basic-test.sh -m
