Added testing for control nodes
Ported basic-test.sh to test_basic.py, and folded in
test_horizonlogin.py.

Made a testing framework for shared components.

Added test_control.py

Got rid of default .stestr.conf, as we're going to have multiple tests
running, and one conf is confusing.

Manually ordering functional tests for now, as stestr noms too much
output, and runs things in parallel, which doesn't work for our
functional tests.

Skipping compute node test for now, as it won't work until we can
connect to a control node with databases and such.

Moved very-basic-test.sh to tools/make-a-microstack.sh. It's really
more of a tool for manual testing than an automated test.

Added test-requirements and updated gitignore.

Moved auto-detection of kvm extensions to init, rather than test, as
it makes more sense there.

Change-Id: Iba7f7fe07cbb066790f802cf2a7c87c68994062c

--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,11 @@ basepython=python3
 deps = -r{toxinidir}/test-requirements.txt
 commands =
     {toxinidir}/tools/lxd_build.sh
-    {toxinidir}/tests/basic-test.sh
+    flake8 {toxinidir}/tests/
+    # Specify tests in sequence, as they can't run in parallel if not
+    # using multipass.
+    {toxinidir}/tests/test_basic.py
+    {toxinidir}/tests/test_control.py    
 
 [testenv:multipass]
 # Default testing environment for a human operated machine. Builds the
@@ -31,16 +35,26 @@ commands =
 # a lot of things installed, including potentially the locally built
 # version of MicroStack!
 deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    PATH = /snap/bin:{env:PATH}
+    MULTIPASS=true
 commands =
     {toxinidir}/tools/multipass_build.sh
-    {toxinidir}/tests/basic-test.sh -m
+    flake8 {toxinidir}/tests/
+    {toxinidir}/tests/test_basic.py
+    {toxinidir}/tests/test_control.py    
 
 [testenv:basic]
 # Just run basic_test.sh, with multipass support.
 deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    MULTIPASS=true
+
 commands =
     {toxinidir}/tools/basic_setup.sh
-    {toxinidir}/tests/basic-test.sh -m
+    flake8 {toxinidir}/tests/
+    {toxinidir}/tests/test_basic.py
+    {toxinidir}/tests/test_control.py    
 
 [testenv:init_lint]
 deps = -r{toxinidir}/tools/init/test-requirements.txt
@@ -50,14 +64,5 @@ commands = flake8 {toxinidir}/tools/init/init/
 [testenv:init_unit]
 deps = -r{toxinidir}/tools/init/test-requirements.txt
        -r{toxinidir}/tools/init/requirements.txt
-commands = stestr run {posargs}
-
-[testenv:browser]
-# Run browser tests. Assumes that you have the snap installed and
-# initialized locally, and a valid DISPLAY (install xvfb for a virtual
-# one).
-# TODO: figure out how to integrate this w/ multipass. (e.g. setup
-# port forwarding and call into the mulitpass machine.)
-deps = -r{toxinidir}/test-requirements.txt
 commands =
-    {toxinidir}/tests/test_horizonlogin.py
+    stestr run --top-dir=./tools/init/ --test-path=./tools/init/tests/ {posargs}
