Ported and updated launch script
Moved security rules and keypair creation into init first.

Launch script now takes image name as positional argument, and name of
instance as a named argument. This makes it work more like launch in
other Canonical tools.

Written in Python, for ease of maintenance.

--retry and --wait args allow it to behave like tests expect it to,
while humans will get a much more intuitive (and much less noisy)
experience.

Also increased time we wait for a ping on the host, to allow for
slower, pure qemu, emulation times, and bring it in line with what
Tempest does in similar situations.

Change-Id: I11dcc098012468e9c88dcc7af78cde6920f31ecd

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -303,7 +303,7 @@ apps:
   # Utility to launch a vm. Creates security groups, floating ips,
   # and other necessities as well.
   launch:
-    command: bin/launch.sh
+    command: microstack_launch
 #    plugs:
 #      - network
 
@@ -820,3 +820,11 @@ parts:
     requirements:
       - requirements.txt  # Relative to source path, so tools/init/req...txt
     source: tools/init
+
+  # Launch script
+  launch:
+    plugin: python
+    python-version: python3
+    requirements:
+      - requirements.txt
+    source: tools/launch
