--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands =
     # Specify tests in sequence, as they can't run in parallel if not
     # using multipass.
     {toxinidir}/tests/test_basic.py
-    {toxinidir}/tests/test_control.py    
+    {toxinidir}/tests/test_control.py
 
 [testenv:multipass]
 # Default testing environment for a human operated machine. Builds the
@@ -42,7 +42,7 @@ commands =
     {toxinidir}/tools/multipass_build.sh
     flake8 {toxinidir}/tests/
     {toxinidir}/tests/test_basic.py
-    {toxinidir}/tests/test_control.py    
+    {toxinidir}/tests/test_control.py
 
 [testenv:basic]
 # Just run basic_test.sh, with multipass support.
@@ -54,7 +54,14 @@ commands =
     {toxinidir}/tools/basic_setup.sh
     flake8 {toxinidir}/tests/
     {toxinidir}/tests/test_basic.py
-    {toxinidir}/tests/test_control.py    
+    {toxinidir}/tests/test_control.py
+
+[testenv:lint]
+deps = -r{toxinidir}/test-requirements.txt
+commands =
+    flake8 {toxinidir}/tests/
+    flake8 {toxinidir}/tools/init/init/
+    flake8 {toxinidir}/tools/launch/launch/
 
 [testenv:init_lint]
 deps = -r{toxinidir}/tools/init/test-requirements.txt
