--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = init_lint, init_unit, multipass
+envlist = lint, unit, multipass
 skipsdist = True
 
 [testenv]
@@ -24,7 +24,6 @@ commands =
     # Specify tests in sequence, as they can't run in parallel if not
     # using multipass.
     {toxinidir}/tests/test_basic.py
-    {toxinidir}/tests/test_control.py
 
 [testenv:multipass]
 # Default testing environment for a human operated machine. Builds the
@@ -42,7 +41,6 @@ commands =
     {toxinidir}/tools/multipass_build.sh
     flake8 {toxinidir}/tests/
     {toxinidir}/tests/test_basic.py
-    {toxinidir}/tests/test_control.py
 
 [testenv:basic]
 # Just run basic_test.sh, with multipass support.
@@ -54,7 +52,30 @@ commands =
     {toxinidir}/tools/basic_setup.sh
     flake8 {toxinidir}/tests/
     {toxinidir}/tests/test_basic.py
-    {toxinidir}/tests/test_control.py
+
+[testenv:cluster]
+# Test out clustering!
+# Requires multipass.
+deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    MULTIPASS=true
+
+commands =
+    {toxinidir}/tools/basic_setup.sh
+    flake8 {toxinidir}/tests/
+    {toxinidir}/tests/test_cluster.py
+
+[testenv:build]
+# Just run basic_test.sh, with multipass support.
+deps = -r{toxinidir}/test-requirements.txt
+setenv =
+    MULTIPASS=true
+
+commands =
+    flake8 {toxinidir}/tests/
+    flake8 {toxinidir}/tools/init/init
+    flake8 {toxinidir}/tools/cluster/cluster
+    {toxinidir}/tools/multipass_build.sh
 
 [testenv:lint]
 deps = -r{toxinidir}/test-requirements.txt
@@ -62,13 +83,9 @@ commands =
     flake8 {toxinidir}/tests/
     flake8 {toxinidir}/tools/init/init/
     flake8 {toxinidir}/tools/launch/launch/
+    flake8 {toxinidir}/tools/cluster/cluster/
 
-[testenv:init_lint]
-deps = -r{toxinidir}/tools/init/test-requirements.txt
-       -r{toxinidir}/tools/init/requirements.txt
-commands = flake8 {toxinidir}/tools/init/init/
-
-[testenv:init_unit]
+[testenv:unit]
 deps = -r{toxinidir}/tools/init/test-requirements.txt
        -r{toxinidir}/tools/init/requirements.txt
 commands =
